--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Work hub</title>
 </head>
 <body>
@@ -35,5 +36,103 @@
             <a href="#" class="log-in">Log In</a>
         </div>
     </nav> 
+
+    <nav class="bottom__nav">
+        <ul class="first__nav">
+            <li><a href="#">Graphics & Design</a></li>
+            <li><a href="#">Programming & Tech</a></li>
+            <li><a href="#">Digital Marketing</a></li>
+            <li><a href="#">Video & Animation</a></li>
+            <li><a href="#">Video & Animation</a></li>
+            <li><a href="#">Writing & Translation</a></li>
+            <li><a href="#">Writing & Translation</a></li>
+            <li><a href="#">Writing & Translation</a></li>
+        </ul>
+    </nav>
+
+    <div class="main__hero">
+        <section class="hero">
+            <div class="hero-content">
+                <h1 class="hero__head">Find the right freelance service, right away</h1>
+                <p class="hero__para">Access global talent on the freelancer website trusted by over 1 million businesses worldwide.</p>
+                <div class="search-container">
+                    <input type="text" placeholder="Search for any service...">
+                    <button class="search-button"><i class="fa fa-search"></i></button>
+                </div>
+                <div class="popular-services">
+                    <span>Popular:</span>
+                    <a href="#">Website Design</a>
+                    <a href="#">WordPress</a>
+                    <a href="#">Logo Design</a>
+                    <a href="#">All Services</a>
+                </div>
+            </div>
+            <div class="hero-image">
+                <img src="path/to/your/image.jpg" alt="Product Image">
+                <div class="profile-card">
+                    <img src="path/to/your/profile-image.jpg" alt="Profile Image">
+                    <div class="profile-info">
+                        <h3>Graphic Designer</h3>
+                        <p>Frankie Albion</p>
+                        <div class="rating">
+                            <span>★</span>
+                            <span>5.0</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+   </div>
+
+
+   <section class="categories-section">
+    <h2 class="category__header">Most popular categories</h2>
+    <div class="categories">
+        <div class="category">
+            <img src="images/book-cover.jpeg" alt="Content Writing">
+            <div class="overlay">
+                <span>Engage your community</span>
+                <h3>Content Writing</h3>
+            </div>
+        </div>
+        <div class="category">
+            <img src="images/book-cover.jpeg" alt="SEO">
+            <div class="overlay">
+                <span>Boost your traffic</span>
+                <h3>SEO</h3>
+            </div>
+        </div>
+        <div class="category">
+            <img src="images/book-cover.jpeg" alt="Website Development">
+            <div class="overlay">
+                <span>Build your site</span>
+                <h3>Website Development</h3>
+            </div>
+        </div>
+        <div class="category">
+            <img src="images/book-cover.jpeg" alt="Logo Design">
+            <div class="overlay">
+                <span>Elevate your brand</span>
+                <h3>Logo Design</h3>
+            </div>
+        </div>
+        <div class="category">
+            <img src="images/book-cover.jpeg" alt="Voice-over">
+            <div class="overlay">
+                <span>Tell your story</span>
+                <h3>Voice-over</h3>
+            </div>
+        </div>
+        <div class="category">
+            <img src="images/book-cover.jpeg" alt="Illustration & Drawing">
+            <div class="overlay">
+                <span>Picture your idea</span>
+                <h3>Illustration & Drawing</h3>
+            </div>
+        </div>
+    </div>
+    <a href="#" class="all-categories">ALL CATEGORIES →</a>
+</section>
+
 </body>
 </html>
