--- a/index.html
+++ b/index.html
@@ -134,5 +134,35 @@
     <a href="#" class="all-categories">ALL CATEGORIES →</a>
 </section>
 
+<div class="main__part-section">
+    <section class="best-part-section">
+        <div class="content">
+            <h2 class="content-head">The best part? Everything.</h2>
+            <ul class="content__order">
+                <li class="content__listing">
+                    <h3 class="content__sec">Stick to your budget</h3>
+                    <p class="content__para">Find the right service for every price point. No hourly rates, just project-based pricing.</p>
+                </li>
+                <li class="content__listing">
+                    <h3 class="content__sec">Get quality work done quickly</h3>
+                    <p class="content__para">Hand your project over to a talented freelancer in minutes, get long-lasting results.</p>
+                </li>
+                <li class="content__listing">
+                    <h3 class="content__sec">Pay when you're happy</h3>
+                    <p class="content__para">Upfront quotes mean no surprises. Payments only get released when you approve.</p>
+                </li>
+                <li class="content__listing">
+                    <h3 class="content__sec">Count on 24/7 support</h3>
+                    <p class="content__para">Our round-the-clock support team is available to help anytime, anywhere.</p>
+                </li>
+            </ul>
+        </div>
+        <div class="video">
+            <img src="path/to/your/video-thumbnail.jpg" alt="Video Thumbnail">
+            <div class="play-button">&#9658;</div>
+        </div>
+    </section>
+</div>
+
 </body>
 </html>
