--- a/index.html
+++ b/index.html
@@ -164,5 +164,304 @@
     </section>
 </div>
 
+<div class="double">
+    <section class="services-section">
+        <h2>Need something done?</h2>
+        <div class="services">
+            <div class="service-item">
+                <img src="path/to/post-a-job-icon.png" alt="Post a job">
+                <h3>Post a job</h3>
+                <p>It's free and easy to post a job. Simply fill in a title, description and budget and competitive bids come within minutes.</p>
+            </div>
+            <div class="service-item">
+                <img src="path/to/choose-freelancers-icon.png" alt="Choose freelancers">
+                <h3>Choose freelancers</h3>
+                <p>No job is too big or too small. We've got freelancers for jobs of any size or budget, across 1800+ skills. No job is too complex.</p>
+            </div>
+            <div class="service-item">
+                <img src="path/to/pay-safely-icon.png" alt="Pay safely">
+                <h3>Pay safely</h3>
+                <p>Only pay for work when it has been completed and you're 100% satisfied with the quality using our milestone payment system.</p>
+            </div>
+            <div class="service-item">
+                <img src="path/to/were-here-to-help-icon.png" alt="We're here to help">
+                <h3>We're here to help</h3>
+                <p>Our talented team of recruiters can help you find the best freelancer for the job and our technical co-pilots can manage.</p>
+            </div>
+        </div>
+    </section>
+
+    <section class="great-section">
+        <h2>What's great about it?</h2>
+        <div class="great-items">
+            <div class="great-item">
+                <img src="path/to/browse-portfolios-icon.png" alt="Browse portfolios">
+                <h3>Browse portfolios</h3>
+                <p>Find professionals you can trust by browsing their samples of previous work and reading their profile reviews.</p>
+            </div>
+            <div class="great-item">
+                <img src="path/to/fast-bids-icon.png" alt="Fast bids">
+                <h3>Fast bids</h3>
+                <p>Receive obligation free quotes from our talented freelancers fast. 80% of projects get bid on within 60 seconds.</p>
+            </div>
+            <div class="great-item">
+                <img src="path/to/quality-work-icon.png" alt="Quality work">
+                <h3>Quality work</h3>
+                <p>Freelancer.com has by far the largest pool of quality freelancers globally - over 60 million to choose from.</p>
+            </div>
+            <div class="great-item">
+                <img src="path/to/track-progress-icon.png" alt="Track progress">
+                <h3>Track progress</h3>
+                <p>Keep up-to-date and on-the-go with our time tracker, and mobile app. Always know what freelancers are up to.</p>
+            </div>
+        </div>
+    </section>
+</div>
+
+<div class="workway__main">
+    <section class="work-your-way-section">
+        <h2>Work Your Way</h2>
+        <p>Choose from four Payment terms and create Agreements.</p>
+        <div class="content">
+            <div class="image">
+                <img src="images/Global.jpg" alt="Laptop showing payment terms">
+            </div>
+            <div class="details">
+                <div class="payment-term">
+                    <h3><span>&#10004;</span> Fixed Price</h3>
+                    <p>Set a total fixed cost for your job and create milestones to ensure you're satisfied every step of the way. Set a due date and the amount to be paid for each milestone.</p>
+                </div>
+                <div class="payment-term">
+                    <h3><span>&#10004;</span> Hourly</h3>
+                </div>
+                <div class="payment-term">
+                    <h3><span>&#10004;</span> Task-Based</h3>
+                </div>
+                <div class="payment-term">
+                    <h3><span>&#10004;</span> Recurring Payment</h3>
+                </div>
+                <button class="learn-more-btn">Learn About Agreements</button>
+            </div>
+        </div>
+    </section>
+</div>
+
+<div class="testimonial">
+    <div class="testimonial__section">
+        <h1 class="testi__header">
+            What Our Clients Say
+        </h1>
+        <p class="testi__para">
+            In our company, we do ongoing research with our target audience.
+            This includes 30-45 minute phone interviews. It was difficult to
+            conduct the interview, really listen, and ask good follow up 
+            questions while trying to capture it all in thorough hand-written
+            notes. One of our writers suggested using WorkHub to find someone
+            to transcribe these interviews... The person I hired is the one
+            I've stuck with for nearly two years now she is fast, accurate,              and affordable. I'd never have found her on my own, given that
+            I live in Utah and she lives in South Africa. I could never
+            have arranged such an effective solution to my on-going need for 
+            transcripts without WorkHub. It's been a life-saver.
+
+        </p>
+
+        <div class="testi__section">
+            <img class="testi__image" src="images/user-5.jpg" alt="">
+            <div class="testi__bottom">
+                <h4 class="name">Ed Bagley</h4>
+                <p class="position">Director of product marketing. O.C. Tanner Company</p>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="job-posting">
+    <div class="job-posting__section">
+        <p class="post__para">
+            Get qoutes from our freelancer proffesionals for free
+        </p>
+
+        <button class="cta-button button__3">Post a Job now</button>
+
+
+    </div>
+</div>
+
+<section class="browse-freelancers-section">
+    <h2>Browse Freelancers</h2>
+    <div class="skills">
+        <div class="top-skills">
+            <h3>Top Skills</h3>
+            <div class="wrapping">
+                <ul>
+                    <li>3D Designers</li>
+                    <li>Accountants</li>
+                    <li>Advertising Experts</li>
+                    <li>App Developers</li>
+                    <li>Article Writers</li>
+                    <li>Artists</li>
+                    <li>Blog Writers</li>
+                    <li>Business Card Designers</li>
+                    <li>C# Developers</li>
+                    <li>C# Developers</li>
+                    <li>Content Writers</li>
+                    <li>Copywriters</li>
+                    <li>CSS Developers</li>
+                </ul>
+                <ul>    
+                    <li>Customer Service Experts</li>
+                    <li>Data Analysts</li>
+                    <li>Data Entry Experts</li>
+                    <li>Editors</li>
+                    <li>Email Specialists</li>
+                    <li>Engineers</li>
+                    <li>English Language Experts</li>
+                    <li>Excel Experts</li>
+                    <li>Graphic Designers</li>
+                    <li>HTML5 Developers</li>
+                    <li>Illustrators</li>
+                    <li>JavaScript Developers</li>
+                    <li>jQuery Developers</li>
+                </ul>    
+                    <ul>
+                        <li>Logo Designers</li>
+                        <li>Marketers</li>
+                        <li>MS Word Experts</li>
+                        <li>MySQL Developers</li>
+                        <li>Photo and Image Editors</li>
+                        <li>Photographers</li>
+                        <li>Photoshop Experts</li>
+                        <li>PHP Developers</li>
+                        <li>Podcast Editors</li>
+                        <li>Python Developers</li>
+                        <li>Programmers</li>
+                        <li>Report Writers</li>
+                        <li>Researchers</li>
+                    </ul>
+                    <ul>
+                    <li>Sales Consultants</li>
+                    <li>SEO Experts</li>
+                    <li>Social Media Marketers</li>
+                    <li>Software Developers</li>
+                    <li>Transcriptionists</li>
+                    <li>Translators</li>
+                    <li>User Experience (UX) Designers</li>
+                    <li>Video Editors</li>
+                    <li>Web Designers</li>
+                    <li>Web Developers</li>
+                    <li>WordPress Developers</li>
+                    <li>Writers</li>
+                    <li>Podcast Editors</li>
+                </ul>
+            </div>
+        </div>
+        <div class="new-skills">
+            <h3>New Skills</h3>
+            <ul class="mentain">
+                <li>Power Automate Consultants</li>
+                <li>WhatsApp Developers</li>
+            </ul>
+        </div>
+    </div>
+    <button class="browse-all-btn">Browse All Skills</button>
+</section>
+
+<div class="my-footer">
+    <footer class="footer">
+      <div class="container-5">
+          <div class="footer-column">
+              <h3 class="footer-head">Categories</h3>
+              <ul class="footer-order">
+                  <li class="footer-list">Graphics & Design</li>
+                  <li class="footer-list">Digital Marketing</li>
+                  <li class="footer-list">Writing & Translation</li>
+                  <li class="footer-list">Video & Animation</li>
+                  <li class="footer-list">Music & Audio</li>
+                  <li class="footer-list">Programming & Tech</li>
+                  <li class="footer-list">Data</li>
+                  <li class="footer-list">Business</li>
+                  <li class="footer-list">Lifestyle</li>
+                  <li class="footer-list">Photography</li>
+                  <li class="footer-list">End-to-End Projects</li>
+                  <li class="footer-list">Sitemap</li>
+              </ul>
+          </div>
+          <div class="footer-column">
+              <h3 class="footer-head">About</h3>
+              <ul class="footer-order">
+                  <li class="footer-list">Careers</li>
+                  <li class="footer-list">Press & News</li>
+                  <li class="footer-list">Partnerships</li>
+                  <li class="footer-list">Privacy Policy</li>
+                  <li class="footer-list">Terms of Service</li>
+                  <li class="footer-list">Intellectual Property Claims</li>
+                  <li class="footer-list">Investor Relations</li>
+                  <li class="footer-list">Contact Sales</li>
+              </ul>
+          </div>
+          <div class="footer-column">
+              <h3 class="footer-head">Support</h3>
+              <ul class="footer-order">
+                  <li class="footer-list">Help & Support</li>
+                  <li class="footer-list">Trust & Safety</li>
+                  <li class="footer-list">Selling on WorkHub</li>
+                  <li class="footer-list">Buying on WorkHub</li>
+                  <li class="footer-list">Guides</li>
+              </ul>
+          </div>
+          <div class="footer-column">
+              <h3 class="footer-head">Community</h3>
+              <ul class="footer-order">
+                  <li class="footer-list">Customer Success Stories</li>
+                  <li class="footer-list">Community Hub</li>
+                  <li class="footer-list">Forum</li>
+                  <li class="footer-list">Events</li>
+                  <li class="footer-list">Blog</li>
+                  <li class="footer-list">Influencers</li>
+                  <li class="footer-list">Affiliates</li>
+                  <li class="footer-list">Podcast</li>
+                  <li class="footer-list">Invite a Friend</li>
+                  <li class="footer-list">Become a Seller</li>
+                  <li class="footer-list">Community Standards</li>
+              </ul>
+          </div>
+          <div class="footer-column">
+              <h3 class="footer-head">More From WorkHub</h3>
+              <ul class="footer-order">
+                  <li class="footer-list">WorkHub Enterprise</li>
+                  <li class="footer-list">WorkHub Business</li>
+                  <li class="footer-list">WorkHub Pro</li>
+                  <li class="footer-list">WorkHub Logo Maker</li>
+                  <li class="footer-list">Get Inspired</li>
+                  <li class="footer-list">ClearVoice</li>
+                  <li class="footer-list">WorkHub Workspace</li>
+                  <li class="footer-list">Learn</li>
+                  <li class="footer-list">Working Not Working</li>
+              </ul>
+          </div>
+      </div>
+      <div class="footer-bottom">
+          <div class="container-5 differ__cont">
+              <div class="footer-left">
+                  <h1 class="footer-first"><span>WORK</span>HUB</h1>
+                  <p class="footer-para">© WorkHub International Ltd. 2023</p>
+              </div>
+              <div class="footer-right">
+                  <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
+                  <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                  <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                  <a href="#"><i class="fa-brands fa-pinterest"></i></a>
+                  <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                  <div class="left-category">
+                      <a href="#" class="footer-language">English</a>
+                      <a href="#" class="footer-currency">$ USD</a>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </footer>
+  
+</div>
+
 </body>
 </html>
