--- a/index.html
+++ b/index.html
@@ -158,8 +158,7 @@
             </ul>
         </div>
         <div class="video">
-            <img src="path/to/your/video-thumbnail.jpg" alt="Video Thumbnail">
-            <div class="play-button">&#9658;</div>
+            <video controls autoplay src="vidoes/one.mp4">your browser doesn't support this video</video>
         </div>
     </section>
 </div>
@@ -169,23 +168,31 @@
         <h2>Need something done?</h2>
         <div class="services">
             <div class="service-item">
-                <img src="path/to/post-a-job-icon.png" alt="Post a job">
-                <h3>Post a job</h3>
+                <div class="my-wrap">
+                    <i class="fa-solid fa-desktop"></i>
+                    <h3>Post a job</h3>
+                </div>
                 <p>It's free and easy to post a job. Simply fill in a title, description and budget and competitive bids come within minutes.</p>
             </div>
             <div class="service-item">
-                <img src="path/to/choose-freelancers-icon.png" alt="Choose freelancers">
-                <h3>Choose freelancers</h3>
+                <div class="my-wrap">
+                    <i class="fa-solid fa-person"></i>
+                    <h3>Choose freelancers</h3>
+                </div>
                 <p>No job is too big or too small. We've got freelancers for jobs of any size or budget, across 1800+ skills. No job is too complex.</p>
             </div>
             <div class="service-item">
-                <img src="path/to/pay-safely-icon.png" alt="Pay safely">
-                <h3>Pay safely</h3>
+                <div class="my-wrap">
+                    <i class="fa-regular fa-credit-card"></i>
+                    <h3>Pay safely</h3>
+                </div>
                 <p>Only pay for work when it has been completed and you're 100% satisfied with the quality using our milestone payment system.</p>
             </div>
             <div class="service-item">
-                <img src="path/to/were-here-to-help-icon.png" alt="We're here to help">
-                <h3>We're here to help</h3>
+                <div class="my-wrap">
+                    <i class="fa-regular fa-id-badge"></i>
+                    <h3>We're here to help</h3>
+                </div>
                 <p>Our talented team of recruiters can help you find the best freelancer for the job and our technical co-pilots can manage.</p>
             </div>
         </div>
@@ -195,23 +202,31 @@
         <h2>What's great about it?</h2>
         <div class="great-items">
             <div class="great-item">
-                <img src="path/to/browse-portfolios-icon.png" alt="Browse portfolios">
-                <h3>Browse portfolios</h3>
+                <div class="my-wrap">
+                    <i class="fa-regular fa-file"></i>
+                    <h3>Browse portfolios</h3>
+                </div>
                 <p>Find professionals you can trust by browsing their samples of previous work and reading their profile reviews.</p>
             </div>
             <div class="great-item">
-                <img src="path/to/fast-bids-icon.png" alt="Fast bids">
-                <h3>Fast bids</h3>
+                <div class="my-wrap">
+                    <i class="fa-regular fa-address-card"></i>
+                    <h3>Fast bids</h3>
+                </div>
                 <p>Receive obligation free quotes from our talented freelancers fast. 80% of projects get bid on within 60 seconds.</p>
             </div>
             <div class="great-item">
-                <img src="path/to/quality-work-icon.png" alt="Quality work">
-                <h3>Quality work</h3>
+                <div class="my-wrap">
+                    <i class="fa-solid fa-medal"></i>
+                    <h3>Quality work</h3>
+                </div>
                 <p>Freelancer.com has by far the largest pool of quality freelancers globally - over 60 million to choose from.</p>
             </div>
             <div class="great-item">
-                <img src="path/to/track-progress-icon.png" alt="Track progress">
-                <h3>Track progress</h3>
+                <div class="my-wrap">
+                    <i class="fa-regular fa-clock"></i>
+                    <h3>Track progress</h3>
+                </div>
                 <p>Keep up-to-date and on-the-go with our time tracker, and mobile app. Always know what freelancers are up to.</p>
             </div>
         </div>
