--- a/index.html
+++ b/index.html
@@ -97,42 +97,42 @@
     <h2 class="category__header">Most popular categories</h2>
     <div class="categories">
         <div class="category">
-            <img src="images/book-cover.jpeg" alt="Content Writing">
+            <img src="images/content.jpeg" alt="Content Writing">
             <div class="overlay">
                 <span>Engage your community</span>
                 <h3>Content Writing</h3>
             </div>
         </div>
         <div class="category">
-            <img src="images/book-cover.jpeg" alt="SEO">
+            <img src="images/SEo.jpeg" alt="SEO">
             <div class="overlay">
                 <span>Boost your traffic</span>
                 <h3>SEO</h3>
             </div>
         </div>
         <div class="category">
-            <img src="images/book-cover.jpeg" alt="Website Development">
+            <img src="images/we.jpeg" alt="Website Development">
             <div class="overlay">
                 <span>Build your site</span>
                 <h3>Website Development</h3>
             </div>
         </div>
         <div class="category">
-            <img src="images/book-cover.jpeg" alt="Logo Design">
+            <img src="images/logo (2).jpeg" alt="Logo Design">
             <div class="overlay">
                 <span>Elevate your brand</span>
                 <h3>Logo Design</h3>
             </div>
         </div>
         <div class="category">
-            <img src="images/book-cover.jpeg" alt="Voice-over">
+            <img src="images/voice.jpeg" alt="Voice-over">
             <div class="overlay">
                 <span>Tell your story</span>
                 <h3>Voice-over</h3>
             </div>
         </div>
         <div class="category">
-            <img src="images/book-cover.jpeg" alt="Illustration & Drawing">
+            <img src="images/draw.jpeg" alt="Illustration & Drawing">
             <div class="overlay">
                 <span>Picture your idea</span>
                 <h3>Illustration & Drawing</h3>
