--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
                 <div class="payment-term">
                     <h3><span>&#10004;</span> Recurring Payment</h3>
                 </div>
-                <button class="learn-more-btn">Learn About Agreements</button>
+                <a href="#" class="learn-more-btn">Learn about agreement</a>
             </div>
         </div>
     </section>
@@ -317,7 +317,7 @@
             Get qoutes from our freelancer proffesionals for free
         </p>
 
-        <button class="cta-button button__3">Post a Job now</button>
+        <a href="#" class="button__3">Post a job now</a>
 
 
     </div>
@@ -399,7 +399,7 @@
             </ul>
         </div>
     </div>
-    <button class="browse-all-btn">Browse All Skills</button>
+    <a href="#" class="browse-all-btn">Browse All Skills</a>
 </section>
 
 <div class="my-footer">
@@ -408,71 +408,71 @@
           <div class="footer-column">
               <h3 class="footer-head">Categories</h3>
               <ul class="footer-order">
-                  <li class="footer-list">Graphics & Design</li>
-                  <li class="footer-list">Digital Marketing</li>
-                  <li class="footer-list">Writing & Translation</li>
-                  <li class="footer-list">Video & Animation</li>
-                  <li class="footer-list">Music & Audio</li>
-                  <li class="footer-list">Programming & Tech</li>
-                  <li class="footer-list">Data</li>
-                  <li class="footer-list">Business</li>
-                  <li class="footer-list">Lifestyle</li>
-                  <li class="footer-list">Photography</li>
-                  <li class="footer-list">End-to-End Projects</li>
-                  <li class="footer-list">Sitemap</li>
+                <li class="footer-list"><a href="#">Graphics & Design</a></li>
+                <li class="footer-list"><a href="#">Digital Marketing</a></li>
+                <li class="footer-list"><a href="#">Writing & Translation</a></li>
+                <li class="footer-list"><a href="#">Video & Animation</a></li>
+                <li class="footer-list"><a href="#">Music & Audio</a></li>
+                <li class="footer-list"><a href="#">Programming & Tech</a></li>
+                <li class="footer-list"><a href="#">Data</a></li>
+                <li class="footer-list"><a href="#">Business</a></li>
+                <li class="footer-list"><a href="#">Lifestyle</a></li>
+                <li class="footer-list"><a href="#">Photography</a></li>
+                <li class="footer-list"><a href="#">End-to-End Projects</a></li>
+                <li class="footer-list"><a href="#">Sitemap</a></li>
               </ul>
           </div>
           <div class="footer-column">
               <h3 class="footer-head">About</h3>
               <ul class="footer-order">
-                  <li class="footer-list">Careers</li>
-                  <li class="footer-list">Press & News</li>
-                  <li class="footer-list">Partnerships</li>
-                  <li class="footer-list">Privacy Policy</li>
-                  <li class="footer-list">Terms of Service</li>
-                  <li class="footer-list">Intellectual Property Claims</li>
-                  <li class="footer-list">Investor Relations</li>
-                  <li class="footer-list">Contact Sales</li>
+                <li class="footer-list"><a href="#">Careers</a></li>
+                <li class="footer-list"><a href="#">Press & News</a></li>
+                <li class="footer-list"><a href="#">Partnerships</a></li>
+                <li class="footer-list"><a href="#">Privacy Policy</a></li>
+                <li class="footer-list"><a href="#">Terms of Service</a></li>
+                <li class="footer-list"><a href="#">Intellectual Property Claims</a></li>
+                <li class="footer-list"><a href="#">Investor Relations</a></li>
+                <li class="footer-list"><a href="#">Contact Sales</a></li>
               </ul>
           </div>
           <div class="footer-column">
               <h3 class="footer-head">Support</h3>
               <ul class="footer-order">
-                  <li class="footer-list">Help & Support</li>
-                  <li class="footer-list">Trust & Safety</li>
-                  <li class="footer-list">Selling on WorkHub</li>
-                  <li class="footer-list">Buying on WorkHub</li>
-                  <li class="footer-list">Guides</li>
+                <li class="footer-list"><a href="#">Help & Support</a></li>
+                <li class="footer-list"><a href="#">Trust & Safety</a></li>
+                <li class="footer-list"><a href="#">Selling on WorkHub</a></li>
+                <li class="footer-list"><a href="#">Buying on WorkHub</a></li>
+                <li class="footer-list"><a href="#">Guides</a></li>
               </ul>
           </div>
           <div class="footer-column">
               <h3 class="footer-head">Community</h3>
               <ul class="footer-order">
-                  <li class="footer-list">Customer Success Stories</li>
-                  <li class="footer-list">Community Hub</li>
-                  <li class="footer-list">Forum</li>
-                  <li class="footer-list">Events</li>
-                  <li class="footer-list">Blog</li>
-                  <li class="footer-list">Influencers</li>
-                  <li class="footer-list">Affiliates</li>
-                  <li class="footer-list">Podcast</li>
-                  <li class="footer-list">Invite a Friend</li>
-                  <li class="footer-list">Become a Seller</li>
-                  <li class="footer-list">Community Standards</li>
+                <li class="footer-list"><a href="#">Customer Success Stories</a></li>
+                <li class="footer-list"><a href="#">Community Hub</a></li>
+                <li class="footer-list"><a href="#">Forum</a></li>
+                <li class="footer-list"><a href="#">Events</a></li>
+                <li class="footer-list"><a href="#">Blog</a></li>
+                <li class="footer-list"><a href="#">learn</a></li>
+                <li class="footer-list"><a href="#">Affiliates</a></li>
+                <li class="footer-list"><a href="#">Podcast</a></li>
+                <li class="footer-list"><a href="#">Invite a Friend</a></li>
+                <li class="footer-list"><a href="#">Become a Seller</a></li>
+                <li class="footer-list"><a href="#">Community Standards</a></li>
               </ul>
           </div>
           <div class="footer-column">
               <h3 class="footer-head">More From WorkHub</h3>
               <ul class="footer-order">
-                  <li class="footer-list">WorkHub Enterprise</li>
-                  <li class="footer-list">WorkHub Business</li>
-                  <li class="footer-list">WorkHub Pro</li>
-                  <li class="footer-list">WorkHub Logo Maker</li>
-                  <li class="footer-list">Get Inspired</li>
-                  <li class="footer-list">ClearVoice</li>
-                  <li class="footer-list">WorkHub Workspace</li>
-                  <li class="footer-list">Learn</li>
-                  <li class="footer-list">Working Not Working</li>
+                <li class="footer-list"><a href="#">WorkHub Enterprise</a></li>
+                <li class="footer-list"><a href="#">WorkHub Business</a></li>
+                <li class="footer-list"><a href="#">WorkHub Pro</a></li>
+                <li class="footer-list"><a href="#">WorkHub Logo Maker</a></li>
+                <li class="footer-list"><a href="#">Get Inspired</a></li>
+                <li class="footer-list"><a href="#">ClearVoice</a></li>
+                <li class="footer-list"><a href="#">WorkHub Workspace</a></li>
+                <li class="footer-list"><a href="#">Learn</a></li>
+                <li class="footer-list"><a href="#">Working Not Working</a></li>
               </ul>
           </div>
       </div>
